87
-- renamed api function typedefs to camel case for consistency and to match
   style guide
-- fixed some Xcode static analysis issues

86
-- pulled in tom's latest nhttp_inpsect code

85
-- swapped use of range and deflt for PT_TABLE and PT_LIST Parameters
   (Parameter* is now in range so that deflt may be used for tabl/list
   defaults)
-- removed -b, -N, -Z and, --perfmon-file options
-- removed uricontent ips rule option
-- added contents and getbuf to InspectApi for content buffers


84
-- pulled in latest codecs
-- removed src/mempool/
-- converted attribute table from xml to lua
-- removed lex/yacc foo from configure.ac

83
-- fixed linux linker ordering

82
-- fixed atom splitter instantiation for fallback in tcp_session.cc

81
-- deleted service registration for paf
-- added StreamSplitter to Inspector
-- added service name to InspectApi
-- deleted ports configs from inspector
-- added port-based bindings lookups

80
-- deleted port monitor foo; will be obviated by binder
-- removed ttl norm checks from codecs; made no sense; drop iff rule is drop
-- moved stream_* bindings to binder
-- removed --enable-inline-init-failopen, --enable-pthread, --enable-ha

79
-- pulled in latest codecs

78
-- deleted ha code; too much churn to support now
-- refactored session and related
-- changed inspector api (priority -> type, purge -> get ssn)

77
-- pulled in josh's changes to make on Linux
-- updated snort.lua for bindings

76
-- moved all src/*.{h,cc} except main.{h,cc} to src/main/
-- updated prototype bindings
-- Xcode warnings cleanup
-- added basic git commands to doc
-- codec updates

75
-- added back InspectApi.pinit() and InspectApi.pterm()
-- eliminated InspectApi.stop()
-- changed signature to Inspector::configure()
-- Inspector::init() and term() are now pinit() and pterm()!  beware!
   (for consistency with naming scheme)
-- other changes to InspectApi / Inspector per comments in header

74
-- started this ChangeLog for internal use only