@@ -8,6 +8,7 @@ x_include_HEADERS = \
 base_api.h \
 bits.h \
 codec.h \
+content_buffer.h \
 logger.h \
 inspector.h \
 ips_option.h \
