@@ -226,196 +226,6 @@ typedef struct _HttpEncodeData
     int encode_type;
 }HttpEncodeData;
 
-#if 0
-static int HttpEncodeInit(SnortConfig*, char *name, char *parameters, void **dataPtr)
-{
-    char **toks, **toks1;
-    int num_toks, num_toks1;
-    int i;
-    char *etype;
-    char *btype;
-    char *findStr1, *findStr2;
-    int negate_flag = 0;
-    unsigned pos;
-    HttpEncodeData *idx= NULL;
-
-    idx = (HttpEncodeData *) SnortAlloc(sizeof(HttpEncodeData));
-
-    if(idx == NULL)
-    {
-        ParseError("Failed allocate data for %s option", name);
-    }
-
-
-    toks = mSplit(parameters, ",", 2, &num_toks, 0);
-
-    if(num_toks != 2 )
-    {
-        ParseError("%s option takes two parameters", name);
-    }
-
-    btype = toks[0];
-    if(!strcasecmp(btype, "uri"))
-    {
-        idx->http_type = HTTP_BUFFER_URI;
-    }
-    else if(!strcasecmp(btype, "header"))
-    {
-        idx->http_type = HTTP_BUFFER_HEADER;
-    }
-    /* This keyword will not be used until post normalization is turned on */
-    /*else if(!strcasecmp(btype, "post"))
-    {
-        idx->http_type = HTTP_BUFFER_CLIENT_BODY;
-    }*/
-    else if(!strcasecmp(btype, "cookie"))
-    {
-        idx->http_type = HTTP_BUFFER_COOKIE;
-    }
-    /*check for a negation when OR is present. OR and negation is not supported*/
-    findStr1 = strchr(toks[1], '|');
-    if( findStr1 )
-    {
-        findStr2 = strchr(toks[1], '!' );
-        if( findStr2 )
-        {
-            ParseError("\"|\" is not supported in conjunction with \"!\" for %s option",
-                    name);
-        }
-
-        pos = findStr1 - toks[1];
-        if ( pos == 0 || pos == (strlen(toks[1]) - 1) )
-        {
-            ParseError("Invalid Parameters for %s option", name);
-        }
-    }
-
-     toks1 = mSplit(toks[1], "|", 0, &num_toks1, 0);
-
-     for(i = 0; i < num_toks1; i++)
-     {
-         etype = toks1[i];
-
-         if( *etype == '!' )
-         {
-             negate_flag = 1;
-             etype++;
-             while(isspace((int)*etype)) {etype++;}
-         }
-
-         if(!strcasecmp(etype, "utf8"))
-         {
-             if(negate_flag)
-                 idx->encode_type &= ~HTTP_ENCODE_TYPE__UTF8_UNICODE;
-             else
-                 idx->encode_type |= HTTP_ENCODE_TYPE__UTF8_UNICODE;
-         }
-
-         else if(!strcasecmp(etype, "double_encode"))
-         {
-             if(negate_flag)
-                 idx->encode_type &= ~HTTP_ENCODE_TYPE__DOUBLE_ENCODE;
-             else idx->encode_type |= HTTP_ENCODE_TYPE__DOUBLE_ENCODE;
-         }
-
-         else if(!strcasecmp(etype, "non_ascii"))
-         {
-             if(negate_flag) idx->encode_type &= ~HTTP_ENCODE_TYPE__NONASCII;
-             else
-                 idx->encode_type |= HTTP_ENCODE_TYPE__NONASCII;
-         }
-
-         /* Base 36 is deprecated and essentially a noop */
-         else if(!strcasecmp(etype, "base36"))
-         {
-             ParseWarning("The \"base36\" argument to the "
-                     "\"http_encode\" rule option is deprecated and void "
-                     "of functionality.\n");
-
-             /* Set encode type so we can check below to see if base36 was the
-              * only argument in the encode chain */
-             idx->encode_type |= HTTP_ENCODE_TYPE__BASE36;
-         }
-
-         else if(!strcasecmp(etype, "uencode"))
-         {
-             if(negate_flag)
-                 idx->encode_type &= ~HTTP_ENCODE_TYPE__UENCODE;
-             else
-                 idx->encode_type |= HTTP_ENCODE_TYPE__UENCODE;
-         }
-
-         else if(!strcasecmp(etype, "bare_byte"))
-         {
-             if(negate_flag)
-                 idx->encode_type &= ~HTTP_ENCODE_TYPE__BARE_BYTE;
-             else
-                 idx->encode_type |= HTTP_ENCODE_TYPE__BARE_BYTE;
-         }
-         else if (!strcasecmp(etype, "iis_encode"))
-         {
-             if(negate_flag)
-                 idx->encode_type &= ~HTTP_ENCODE_TYPE__IIS_UNICODE;
-             else
-                 idx->encode_type |= HTTP_ENCODE_TYPE__IIS_UNICODE;
-         }
-         else if  (!strcasecmp(etype, "ascii"))
-         {
-             if(negate_flag)
-                 idx->encode_type &= ~HTTP_ENCODE_TYPE__ASCII;
-             else
-                 idx->encode_type |= HTTP_ENCODE_TYPE__ASCII;
-         }
-
-         else
-         {
-             ParseError("Unknown modifier '%s' for option '%s'",
-                     toks1[i], name);
-         }
-         negate_flag = 0;
-     }
-
-     /* Only got base36 parameter which is deprecated.  If it's the only
-      * parameter in the chain make it so it always matches as if the
-      * entire rule option were non-existent. */
-     if (idx->encode_type == HTTP_ENCODE_TYPE__BASE36)
-     {
-         idx->encode_type = 0xffffffff;
-     }
-
-     *dataPtr = idx;
-     mSplitFree(&toks,num_toks);
-     mSplitFree(&toks1,num_toks1);
-
-     return 0;
-}
-
-static int HttpEncodeEval(Packet* pkt, const uint8_t**, void *dataPtr)
-{
-    HttpEncodeData* idx = (HttpEncodeData *)dataPtr;
-    const HttpBuffer* hb;
-
-    if ( !pkt || !idx )
-        return DETECTION_OPTION_NO_MATCH;
-
-    hb = GetHttpBuffer(idx->http_type);
-
-    if ( hb && (hb->encode_type & idx->encode_type) )
-        return DETECTION_OPTION_MATCH;
-
-    return DETECTION_OPTION_NO_MATCH;
-}
-
-static void HttpEncodeCleanup(void *dataPtr)
-{
-    HttpEncodeData *idx = (HttpEncodeData*)dataPtr;
-    if (idx)
-    {
-        free(idx);
-    }
-}
-#endif
-
 static inline void InitLookupTables(void)
 {
     int iNum;
